tests/testdata/negative/slice_type_mismatch.go
package main
func main() {
  s := []int{1, 2, 3};
  s = append(s, true);
}
